openshift-local/scorpiobroker/base/routes/scorpiobroker/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: scorpiobroker
  name: scorpiobroker
spec:
  host: scorpiobroker.apps-crc.testing
  to:
    kind: Service
    name: scorpiobroker
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
